force-app/main/default/objects/InsurancePolicyParticipant/fields/Enterprise_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Party_Id__c</fullName>
    <description>Unique Identifier for a Contact.</description>
    <externalId>true</externalId>
    <label>Enterprise Party Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>