force-app/main/default/objects/InsurancePolicyParticipant/fields/Policy_Participant_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_Participant_External_Id__c</fullName>
    <description>Concatenated External Id for Policy Participants.   &lt;Policy&gt;-&lt;Contact&gt;
Used to upsert the Policy Participant Record via ETL.
By definition, a single combination per policy.   If a participant holds multiple roles, they will have a single record will multiple values:  e.g.  Owner, Insured, Payor</description>
    <externalId>true</externalId>
    <label>Policy Participant External Id</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>