force-app/main/default/objects/InsurancePolicyParticipant/fields/PolicyExtId__c.field-meta.xml
<CustomField>
    <fullName>PolicyExtId__c</fullName>
    <description>Policy External ID as known to the Policy Administration System.  Used to resolve the lookup to Policy.</description>
    <externalId>true</externalId>
    <label>Policy Ext Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>